# teest

./: .gitignore  README.md  backend_server.py  build_release.bat  package.bat  package.sh  requirements.txt  run.bat  run.sh
.github/workflows/: release.yml
frontend/: CMakeLists.txt  build.bat  build.sh
frontend/qml/: AppWindow.qml  main.qml
frontend/qml/components/: GlassButton.qml  GlassCard.qml  GlassCheckBox.qml  GlassComboBox.qml  GlassSeparator.qml  GlassTextField.qml  SidebarClassBtn.qml  TabButton.qml  WeaponCard.qml
frontend/qml/panels/: PreviewPanel.qml  SettingsPanel.qml  WeaponPanel.qml
frontend/src/: BackendBridge.cpp  BackendBridge.h  MacOSGlass.h  MacOSGlass.mm  WindowsGlass.cpp  WindowsGlass.h  main.cpp
